RESOLVED FIXED123251
[EFL] Compilation warning in DumpRenderTreeView.cpp on 64-Bit
https://bugs.webkit.org/show_bug.cgi?id=123251
Summary [EFL] Compilation warning in DumpRenderTreeView.cpp on 64-Bit
Sanghyup Lee
Reported 2013-10-23 23:23:14 PDT
The "%llu" format specifier is used to print an uint64_t value in DumpRenderTreeView.cpp. This causes a warning on 64-Bit where "%lu" is expected. We should make use of the PRIu64 macro from inttypes.h to avoid this issue.
Attachments
Patch (1.59 KB, patch)
2013-10-23 23:29 PDT, Sanghyup Lee
no flags
Sanghyup Lee
Comment 1 2013-10-23 23:29:41 PDT
Csaba Osztrogonác
Comment 2 2013-10-24 04:17:28 PDT
Comment on attachment 215029 [details] Patch r=me
WebKit Commit Bot
Comment 3 2013-10-24 04:40:16 PDT
Comment on attachment 215029 [details] Patch Clearing flags on attachment: 215029 Committed r157922: <http://trac.webkit.org/changeset/157922>
WebKit Commit Bot
Comment 4 2013-10-24 04:40:18 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.