[EFL] Compilation warning in DumpRenderTreeView.cpp on 64-Bit https://bugs.webkit.org/show_bug.cgi?id=123251

Patch by Sanghyup Lee <sh53.lee@samsung.com> on 2013-10-24
Reviewed by Csaba Osztrogonác.

Replace %llu by PRIu64 macro to print an uint64_t value and silent a
compilation warning on 64-Bit.

* DumpRenderTree/efl/DumpRenderTreeView.cpp:
(onExceededDatabaseQuota):

Canonical link: https://commits.webkit.org/141364@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@157922 268f45cc-cd09-0410-ab3c-d52691b4dbfc